--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  image_picker: ^0.8.5+3
+  image_picker: ^0.8.9
   path: ^1.8.3
   flutter_tflite: ^1.0.1
   lottie: ^2.7.0
@@ -44,6 +44,10 @@ dependencies:
   flutter_dotenv: ^5.1.0
   youtube_api: ^1.0.4
   youtube_player_flutter: ^8.1.2
+  permission_handler: ^11.3.1
+  chat_gpt_sdk: ^3.0.4
+  typewritertext: ^3.0.8
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
